[package]
name = "jcake-ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serve", "pandoc"]
serve = ["dep:actix-web", "dep:actix-files"]
pandoc = ["dep:pandoc"]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
toml = { version = "0.8.10", features = [] }
clap = { version = "4.5.0", features = ["color", "derive"] }
tokio = { version = "1.36.0", features = ["full"] }
# small & utility dependencies
regex = "1.10.3"
globwalk = "0.9.1"
log = "0.4.20"
env_logger = "0.11.1"

# Optional Dependencies

pandoc = { version = "0.8.11", optional = true }
actix-web = { version = "4.5.1", optional = true }
actix-files = { version = "0.6.5", optional = true }
